--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ section{
 }
 
 section h2{
-    background-color: #FED7AA;
+    background-color: #dc7a0a;
     padding: 8px 16px;
     text-align: center;
     
